--- a/docker/ruby/Dockerfile
+++ b/docker/ruby/Dockerfile
@@ -1,6 +1,8 @@
 FROM ruby:2.5.1
 
-RUN apt-get update -qq && \
+RUN curl -sL https://deb.nodesource.com/setup_10.x | \
+    bash - && \
+    apt-get update -qq && \
     apt-get install -y build-essential \
                        nodejs
 
