--- a/src/test/fixtures/users.yml
+++ b/src/test/fixtures/users.yml
@@ -2,10 +2,10 @@
 
 one:
   name: MyString
-  address: MyString
-  age: 1
+  email: MyString
+  password_digest: MyString
 
 two:
   name: MyString
-  address: MyString
-  age: 1
+  email: MyString
+  password_digest: MyString
