--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - ./.env
     depends_on:
       - mysql
+      - redis
     volumes:
       - .:/var/www/html
       - bundle_install:/usr/local/bundle
@@ -29,6 +30,13 @@ services:
       - 3306:3306
     volumes:
       - mysql-data:/var/lib/mysql
+  redis:
+    image: redis:5.0.5
+    ports:
+      - 6379:6379
+    volumes:
+      - ./redis:/data
+    command: redis-server --appendonly yes
 volumes:
   mysql-data:
   bundle_install:
